Fixed alignment issues

--- a/views/stylesheets/_flights.scss
+++ b/views/stylesheets/_flights.scss
@@ -4,7 +4,7 @@
   right: 0;
   position: absolute;
   color: black;
-  padding: 10px;
+  padding: 10px 0;
   padding-top: 20px;
   background: rgba(26, 53, 44,.6);
 
