--- a/views/stylesheets/_main.scss
+++ b/views/stylesheets/_main.scss
@@ -69,7 +69,6 @@ img {
   left: 0;
   right: 0;
   color: black;
-  padding: 10px;
   padding-top: 20px;
   padding-bottom: 100px;
 }
